HelloUltraviolet/Fixtures/RejectedSource/Expressions/ArgsTConsRef/Expected.uv
//! Expected diagnostic metadata for the ArgsTConsRef rejected-source specimen.

expectedDiagnostic("E-SEM-2535", "rule.16.ArgsT-Cons-Ref")
